fix: background of project modal in dark mode

--- a/style.css
+++ b/style.css
@@ -18,6 +18,9 @@
   .project-box {
     background-color: #333 !important;
   }
+  .project-modal {
+    background-color: #333 !important;
+  }
   #github {
     filter: invert(98%) sepia(0%) saturate(471%) hue-rotate(137deg)
       brightness(93%) contrast(85%);
